Add bold and remove list spacing

--- a/proposal.tex
+++ b/proposal.tex
@@ -60,15 +60,15 @@
 \begin{center}
 \huge \textbf{Proposal for a GPU eCSE Application}\\
 \end{center}
-Applicants for a GPU eCSE application should use this template.\\
+Applicants for a \textbf{GPU eCSE application} should use this template.\\
 
-\noindent This GPU eCSE call will close at 16:00 on Tuesday 19 March 2024. No applications will be accepted after this time.\\
+\noindent This GPU eCSE call will close at \textbf{16:00 on Tuesday 19 March 2024}. No applications will be accepted after this time.\\
 
 \noindent Please note:
-\begin{itemize}
+\begin{itemize}[nosep]
 	\item There is a hard page limit for each section which is shown at the start of each section. 
 	\item The font size should be no smaller than 11pt and the margins should be no smaller than 2.5cm. 
-\end{itemize}
+\end{itemize}\vspace{1em}
 
 \noindent Please upload your proposal when you fill in your eCSE application online form via the eCSE Funding Calls section within the SAFE: \url{https://safe.epcc.ed.ac.uk/}.\\
 
